--- a/profile.html
+++ b/profile.html
@@ -554,12 +554,12 @@
             <span class="text">Stories</span>
             <span class="line"></span>
           </li>
-          <li data-element="opinions" class="tab-item opinions">
-            <span class="text">Opinions</span>
+          <li data-element="followers" class="tab-item followers">
+            <span class="text">Followers</span>
             <span class="line"></span>
           </li>
-          <li data-element="people" class="tab-item related">
-            <span class="text">People</span>
+          <li data-element="following" class="tab-item following">
+            <span class="text">Following</span>
             <span class="line"></span>
           </li>
         </ul>
