--- a/profile.html
+++ b/profile.html
@@ -540,6 +540,7 @@
       <p class="about">
         Student at East African University
       </p>
+      <div class="action follow">Follow</div>
       <div class="actions">
         <div class="author">
           <span class="code">U0A89BA6</span>
