--- a/profile.html
+++ b/profile.html
@@ -566,8 +566,26 @@
         </ul>
       </div>
       <div class="content-container">
-        <stories-feed stories="all" url="/stories/feed"></stories-feed>
+        <!-- <stories-feed stories="all" url="/stories/feed"></stories-feed> -->
         <!-- <opinions-feed opinions="all" url="/opinions"></opinions-feed> -->
+        <div class="people">
+          <div class="person">
+            <div class="info">
+              <div class="image">
+                <img src="" alt="User profile picture">
+              </div>
+              <div class="data">
+                <span class="user">
+                  <span class="code">U0A89BA6</span>
+                  <span class="sp">•</span>
+                  <span class="joined">Mar 13, 2024</span>
+                </span>
+                <p>Fredrick Ochieng</p>
+              </div>
+            </div>
+            <span class="action follow">Follow</span>
+          </div>
+        </div>
       </div>
     </section>
     <section class="side">
