--- a/profile.html
+++ b/profile.html
@@ -572,13 +572,13 @@
           <div class="person">
             <div class="info">
               <div class="image">
-                <img src="" alt="User profile picture">
+                <img src="img/img.jpg" alt="User profile picture">
               </div>
               <div class="data">
                 <span class="user">
                   <span class="code">U0A89BA6</span>
                   <span class="sp">•</span>
-                  <span class="joined">Mar 13, 2024</span>
+                  <span class="joined">3y ago</span>
                 </span>
                 <p>Fredrick Ochieng</p>
               </div>
