--- a/profile.html
+++ b/profile.html
@@ -578,7 +578,39 @@
                 <span class="user">
                   <span class="code">U0A89BA6</span>
                   <span class="sp">•</span>
-                  <span class="joined">3y ago</span>
+                  <span class="joined">3y</span>
+                </span>
+                <p>Fredrick Ochieng</p>
+              </div>
+            </div>
+            <span class="action follow">Follow</span>
+          </div>
+          <div class="person">
+            <div class="info">
+              <div class="image">
+                <img src="img/img.jpg" alt="User profile picture">
+              </div>
+              <div class="data">
+                <span class="user">
+                  <span class="code">U0A89BA6</span>
+                  <span class="sp">•</span>
+                  <span class="joined">24h</span>
+                </span>
+                <p>Fredrick Ochieng</p>
+              </div>
+            </div>
+            <span class="action following">Following</span>
+          </div>
+          <div class="person">
+            <div class="info">
+              <div class="image">
+                <img src="img/img.jpg" alt="User profile picture">
+              </div>
+              <div class="data">
+                <span class="user">
+                  <span class="code">U0A89BA6</span>
+                  <span class="sp">•</span>
+                  <span class="joined">3y</span>
                 </span>
                 <p>Fredrick Ochieng</p>
               </div>
