--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
           import TopicsLoader from "./js/loaders/topics.loader.js";
 
           import StoryFeed from "./js/feeds/stories.feed.js";
-          import OpinionFeed from "./js/feeds/opinions.feeds.js";
+          import OpinionFeed from "./js/feeds/opinions.feed.js";
 
           import PeopleContainer from "./js/containers/people.container.js";
           import StoriesContainer from "./js/containers/stories-container.js"
