--- a/topic.html
+++ b/topic.html
@@ -522,7 +522,26 @@
 
   <main class="topic">
     <section class="main">
-      Main
+      <div class="head">
+        <div class="text-content">
+          <h2 class="tag">
+            Health Care
+          </h2>
+          <div class="sub-text">
+            Discover, read, and contribute to stories about Health Care. Follow to interact
+            with the contributing authors in the topic.
+            You can also get the stories periodically via email by subscribing to this topic.
+          </div>
+          <div class="actions">
+            <span class="action subscribe" id="subscribe-action">
+              <span class="text">Subscribe</span>
+            </span>
+            <span class="action start">
+              <span class="text">Start writing</span>
+            </span>
+          </div>
+        </div>
+      </div>
       <div class="content-container">
         Content
       </div>
