--- a/topic.html
+++ b/topic.html
@@ -542,8 +542,18 @@
           </div>
         </div>
       </div>
+      <div class="foot">
+        <div class="author">
+          <span class="code">T0BA3B63</span>
+          <span class="sp">•</span>
+          <span class="stories">
+            <span class="no">293</span>
+            <span class="text">Stories</span>
+          </span>
+        </div>
+      </div>
       <div class="content-container">
-        Content
+        <stories-feed stories="all" url="/U0A89BA6/stories"></stories-feed>
       </div>
     </section>
     <section class="side">
