--- a/topic.html
+++ b/topic.html
@@ -522,7 +522,7 @@
     </ul>
   </header>
   <app-topic subscribers="901" stories="609" id="T0A43PBA"
-    name="health care" url="/topics/T0A43PBA"  subscribed="true">
+    name="health care" url="/topics/T0A43PBA"  subscribed="false">
   </app-topic>
 </body>
 
