--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
         <span class="topic">Engineering</span>
         <h1 class="title">Making the Web. Faster.</h1>
         <span class="stats">
-          <span class="date">June 23, 2021 (3y ago)</span>
+          <span class="date">June 23, 2021</span>
           <span class="dot"></span>
           <span class="views">54,916 views</span>
         </span>
