--- a/index.html
+++ b/index.html
@@ -628,14 +628,6 @@
       </section>
     </article>
     <section class="side">
-      <span class="open-details-mobile">
-        <svg height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" aria-hidden="true">
-          <path fill-rule="evenodd" clip-rule="evenodd"
-            d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z"
-            fill="currentColor"></path>
-        </svg>
-        <span class="text">View details</span>
-      </span>
       <div class="head">
         <p class="text">Posted by</p>
         <div class="author">
@@ -648,37 +640,59 @@
           </div>
         </div>
       </div>
-      <div class="on-this">
-        <div class="topics">
-          <a href="" class="topic">Engineering</a>
-          <a href="" class="topic">Tech</a>
-          <a href="" class="topic">Ubuntu</a>
-        </div>
-        <div class="table-of-content">
-          <p class="title">On this page</p>
-          <ul class="list">
-            <li>
-              <a href="#why-use-a-vector-database-for-recommending-content">Why use a vector database for recommending
-                content</a>
-            </li>
-            <li><a href="#what-we-will-build">What we will build</a></li>
-            <li><a href="#tools-technologies-used">Tools/ technologies used</a></li>
-            <li><a href="#creating-the-app">Creating the app</a>
-              <ul class="inner-list">
-                <li><a href="#step-1-create-the-table">Step 1: Create the table</a></li>
-                <li><a href="#step-2-get-movie-data">Step 2: Get movie data</a></li>
-                <li><a href="#step-3-generate-embeddings">Step 3: Generate embeddings</a></li>
-                <li><a href="#step-4-store-the-data-in-the-supabase-database">Step 4: Store the data in the Supabase
-                    database</a></li>
-                <li><a href="#step-5-create-a-database-function-to-query-similar-movies">Step 5: Create a database function to
-                    query similar movies</a></li>
-                <li><a href="#step-6-create-the-flutter-interface">Step 6: Create the Flutter interface</a></li>
-              </ul>
-            </li>
-            <li><a href="#afterthoughts">Afterthoughts</a></li>
-            <li><a href="#resources">Resources</a></li>
-          </ul>
-        </div>
+      <div class="related">
+        <p class="title">Related stories</p>
+        <ul class="stories">
+          <li class="story">
+            <a href="" class="link">
+              <span class="title">Ubuntu vs Debian: Which one is better</span>
+              <span class="date">June 23, 2021</span>
+            </a>
+          </li>
+          <li class="story">
+            <a href="" class="link">
+              <span class="title">Ubuntu Makes Proprietary Software Easier to Get</span>
+              <span class="date">June 23, 2021</span>
+            </a>
+          </li>
+          <li class="story">
+            <a href="" class="link">
+              <span class="title">Behind the scenes of Vercel's infrastructure: Achieving optimal scalability and performance</span>
+              <span class="date">June 23, 2021</span>
+            </a></li>
+        </ul>
+      </div>
+
+      <div class="company">
+        <!-- <div class="title">Resources</div> -->
+        <ul class="footer-list">
+          <li class="item">
+            <a href="" class="item-link">Docs</a>
+          </li>
+          <li class="item">
+            <a href="" class="item-link">What’s New</a>
+            <span class="dot"></span>
+          </li>
+          <li class="item">
+            <a href="" class="item-link">Give a feedback </a>
+          </li>
+          <li class="item">
+            <a href="" class="item-link">Request a feature</a>
+          </li>
+          <li class="item">
+            <a href="" class="item-link">Source code</a>
+            <span class="dot"></span>
+          </li>
+          <li class="item">
+            <a href="" class="item-link">Donate</a>
+          </li>
+          <li class="item">
+            <a href="" class="item-link">Contact</a>
+          </li>
+          <li class="item">
+            <a href="#" class="item-link">&copy 2024 aduki, Inc</a>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
