--- a/index.html
+++ b/index.html
@@ -472,6 +472,14 @@
     </ul>
 
     <ul class="right">
+      <li class="link icon signin">
+        <a href="" class="link-item">Sign in</a>
+      </li>
+      <li class="link icon profile">
+        <a href="" class="link-item">
+          <img src="img/img.jpg" alt="Profile photo" srcset="">
+        </a>
+      </li>
       <li class="link icon search">
         <a href="" class="link-item">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -481,9 +489,6 @@
               stroke-linejoin="round" />
           </svg>
         </a>
-      </li>
-      <li class="link icon signin">
-        <a href="" class="link-item">Sign in</a>
       </li>
     </ul>
   </header>
