--- a/index.html
+++ b/index.html
@@ -503,6 +503,19 @@
           <span class="dot"></span>
           <span class="views">54,916 views</span>
         </span>
+
+        <div class="posted-by">
+          <p class="text">Posted by</p>
+          <div class="author">
+            <div class="image">
+              <img src="img/img.jpg" alt="Fredrick Ochieng" srcset="">
+            </div>
+            <div class="name">
+              <a href="" class="name">Fredrick Ochieng</a>
+              <span class="occupation">Founder, CIARS</span>
+            </div>
+          </div>
+        </div>
       </div>
       <div id="content" class="content">
         <div class="fonts" id="sticky-position">
@@ -628,7 +641,7 @@
       </section>
     </article>
     <section class="side">
-      <div class="head">
+      <div class="posted-by">
         <p class="text">Posted by</p>
         <div class="author">
           <div class="image">
