--- a/index.html
+++ b/index.html
@@ -504,16 +504,9 @@
           <span class="views">54,916 views</span>
         </span>
 
-        <div class="posted-by">
-          <div class="author">
-            <div class="image">
-              <img src="img/img.jpg" alt="Fredrick Ochieng" srcset="">
-            </div>
-            <div class="name">
-              <a href="" class="name">Fredrick Ochieng</a>
-              <span class="occupation">Founder, CIARS</span>
-            </div>
-          </div>
+        <div class="by">
+          <span class="by">by</span>
+          <a href="" class="name">Fredrick Ochieng</a>
         </div>
       </div>
       <div id="content" class="content">
