--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
         <span class="stats">
           <span class="date">June 23, 2021</span>
           <span class="dot"></span>
-          <span class="views">54,916 views</span>
+          <span class="views">54k views</span>
         </span>
 
         <div class="by">
