--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     import AppPost from "./js/apps/post.app.js";
     import AppSearch from "./js/apps/search.app.js";
     import AppProfile from "./js/apps/profile.app.js";
+    import AppStory from "./js/apps/story.app.js";
 
     import StoryBody from "./js/story.body.js";
 
@@ -53,6 +54,7 @@
     customElements.define('app-post', AppPost);
     customElements.define('app-search', AppSearch);
     customElements.define('app-profile', AppProfile);
+    customElements.define('app-story', AppStory);
 
     customElements.define('story-body', StoryBody)
 
@@ -669,9 +671,7 @@
             </a></li>
         </ul>
       </div>
-
       <div class="company">
-        <!-- <div class="title">Resources</div> -->
         <ul class="footer-list">
           <li class="item">
             <a href="" class="item-link">Docs</a>
