--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
     import AppSearch from "./js/apps/search.app.js";
     import AppProfile from "./js/apps/profile.app.js";
     import AppStory from "./js/apps/story.app.js";
+     import AppTopic from "./js/apps/topic.app.js";
 
     import HeaderContainer from "./js/containers/header.container.js"
     import StoryBody from "./js/story.body.js";
@@ -56,6 +57,7 @@
     customElements.define('app-search', AppSearch);
     customElements.define('app-profile', AppProfile);
     customElements.define('app-story', AppStory);
+    customElements.define('app-topic', AppTopic);
 
     customElements.define('header-container', HeaderContainer);
     customElements.define('story-body', StoryBody);
