--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <body>
 
-  <header-container id="U0AB236B6" create-account="/join" create-content="/create" title="Making the Web. Faster."
+  <header-container id="U0AB236B6" create-account="/join" create-content="/create"
     user-profile="/u/U0AB236B6" user-img="img/img.jpg" user-analytics="/u/U0AB236B6/analytics"
     stories-popular="/stories/popular" stories-recent="/stories/recent" stories-curated="/stories/curated"
     discover="/discover" home="/home" journals="/journals" authors="/authors"  github="https://github.com/fescii" supabase="/link"
@@ -155,25 +155,6 @@
       </div>
     </div>
   </footer>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const stickyPositions = document.querySelectorAll('#sticky-position');
-      window.addEventListener('scroll', () => {
-        if (stickyPositions) {
-          stickyPositions.forEach(stickyPosition => {
-            const positionRect = stickyPosition.getBoundingClientRect();
-            if (positionRect.top <= 70) {
-              stickyPosition.classList.add('sticky');
-            }
-            else {
-              stickyPosition.classList.remove('sticky');
-            }
-          })
-        }
-      })
-
-    })
-  </script>
 </body>
 
 </html>
