--- a/topic.html
+++ b/topic.html
@@ -94,7 +94,7 @@
 </head>
 
 <body>
-  <header-container id="U0AB236B6" create-account="/join" create-content="/create" title="Making the Web. Faster."
+  <header-container id="U0AB236B6" create-account="/join" create-content="/create"
     user-profile="/u/U0AB236B6" user-img="img/img.jpg" user-analytics="/u/U0AB236B6/analytics"
     stories-popular="/stories/popular" stories-recent="/stories/recent" stories-curated="/stories/curated"
     discover="/discover" home="/home" journals="/journals" authors="/authors" github="https://github.com/fescii"
