--- a/edit-profile.html
+++ b/edit-profile.html
@@ -270,7 +270,37 @@
             </div>
             <div class="input-group lastname">
               <label for="lastname" class="center">Last name</label>
-              <input data-name="lastname" type="text" name="lastname" id="lastname" placeholder="Enter your last name" required>
+              <input data-name="lastname" type="text" name="lastname" id="lastname" value="Ochieng" placeholder="Enter your last name" required>
+              <span class="status">Last name is required</span>
+            </div>
+          </div>
+          <div class="actions">
+            <button type="submit" class="action next">
+              <span class="text">Update name</span>
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="bio-form">
+        <div class="top">
+          <h4 class="title">Your name</h4>
+          <p class="desc">
+            Your name is how people will find you on the platform. You can use your real name or a nickname.
+            Both first and last name fields can't be empty.
+          </p>
+        </div>
+        <form class="fields initial">
+          <div class="field bio">
+            <div class="input-group firstname">
+              <label for="firstname" class="center">First name</label>
+              <input data-name="firstname" type="text" name="firstname" id="firstname" placeholder="Enter your first name"
+                value="Fredrick" required>
+              <span class="status">First name is required</span>
+            </div>
+            <div class="input-group lastname">
+              <label for="lastname" class="center">Last name</label>
+              <input data-name="lastname" type="text" name="lastname" id="lastname" placeholder="Enter your last name"
+                required>
               <span class="status">Last name is required</span>
             </div>
           </div>
